tests/errors/4_type_errors/boolop-test13.ifj.java
class Main { 
    static void run() {
    	double b = 5.5;
        boolean a = b; // double to boolean
    }
}